[package]
name = "seed-client"
version = "9.0.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "seed"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.9", default-features = false, features = ["derive"] }
futures = { workspace = true }
hex-literal = { workspace = true }
hex = { workspace = true }
libsecp256k1 = { workspace = true }
thiserror = { workspace = true }

sc-cli = { workspace = true }
sp-core = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-executor = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-babe-rpc = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sc-client-api = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
sp-inherents = { workspace = true }
sp-keystore = { workspace = true }
sp-transaction-storage-proof = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
sc-offchain = { workspace = true }

# Frontier
fc-consensus = { workspace = true }
fc-db = { workspace = true }
fc-mapping-sync = { workspace = true, features = ["sql"] }
fc-rpc = { workspace = true, features = [ "rpc-binary-search-estimate" ] }
fc-rpc-core = { workspace = true }
fp-rpc = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true }
sc-rpc = { workspace = true }
sp-api = { workspace = true }
sc-rpc-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }
sc-basic-authorship = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }

# Local Dependencies
ethy-gadget = { workspace = true, default-features = true }
ethy-gadget-rpc = { workspace = true, default-features = true }
seed-primitives = { workspace = true, default-features = true }
seed-runtime = { workspace = true, default-features = true }
pallet-maintenance-mode = { workspace = true, default-features = true }
pallet-dex-rpc = { workspace = true, default-features = true }
pallet-nft-rpc = { workspace = true, default-features = true }
pallet-sft-rpc = { workspace = true, default-features = true }
pallet-assets-ext-rpc = { workspace = true, default-features = true }

# Try Runtime
frame-try-runtime = { workspace = true, optional = true }
try-runtime-cli = { workspace = true, optional = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
default = ["rocksdb"]
rocksdb = ["fc-db/rocksdb"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "frame-benchmarking-cli/runtime-benchmarks", "seed-runtime/runtime-benchmarks",  "sc-service/runtime-benchmarks"]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["seed-runtime/try-runtime", "try-runtime-cli/try-runtime", "frame-try-runtime"]
