[package]
name = "ethy-gadget"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "The Root Network Team"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
ethabi = { version = "17.1.0" }
futures = "0.3.25"
futures-timer = "3.0.1"
hex = "0.4"
log = "0.4"
parking_lot = "0.12.1"
thiserror = "1.0"
codec = { version = "3.0.0", package = "parity-scale-codec", features = ["derive"] }
libsecp256k1 = { version = "0.6.0" }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", version = "0.10.0-dev"}
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-network-gossip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

seed-primitives = { path = "../primitives" }
xrpl-codec = { git = "https://github.com/futureversecom/xrpl-tx-codec", version = "0.1.1" }

[dev-dependencies]
hex-literal = "*"
serde = "1.0.136"
strum = { version = "0.24", features = ["derive"] }
tempfile = "3.1.0"
tokio = "1.17.0"
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
