[package]
name = "ethy-gadget"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>", "The Root Network Team"]
edition.workspace = true
license.workspace = true

[dependencies]
futures-timer = { version = "3.0.1", default-features = false }
parking_lot = { workspace = true }

ethabi = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
codec = { workspace = true }
libsecp256k1 = { workspace = true }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", version = "0.10.0-dev", default-features = false }
sc-chain-spec = { workspace = true }
sc-client-api = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-network-gossip = { workspace = true }
sc-utils = { workspace = true }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-arithmetic = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sc-network-common = { workspace = true }

seed-primitives = { workspace = true, default-features = true }
xrpl-codec = { workspace = true }

[dev-dependencies]
strum = { version = "0.24", default-features = false }
tempfile = { version = "3.1.0", default-features = false }
hex-literal = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
sc-consensus = { workspace = true }
sc-service = { workspace = true }
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0", default-features = false }
sc-block-builder = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-keyring = { workspace = true }
sp-tracing = { workspace = true }
substrate-test-runtime-client = { workspace = true }
