[package]
name = "seed-primitives"
version = "1.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2021"
description = "Types shared across parachain pallets, runtime, and client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false }
impl-serde = { version = "0.3.1", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = [ "hmac" ] }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.144", optional = true }

sp-consensus-aura = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-core = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-io = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/futureversecom/substrate", default-features = false, branch = "polkadot-v0.9.23" }

[dev-dependencies]
hex = "*"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.23" }

[features]
default = ["std"]
std = [
	"codec/std",
    "impl-serde/std",
    "libsecp256k1/std",
    "log/std",
	"scale-info/std",
	"serde",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]
