[package]
name = "seed-primitives"
version = "1.0.0"
description = "Types shared across parachain pallets, runtime, and client"
authors.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
impl-serde = { version = "0.4.0", default-features = false }
libsecp256k1 = { workspace = true }
log = { workspace = true }
ripemd = { version = "0.1", default-features = false }
serde = { workspace = true }
sha2 = { workspace = true }

codec = { workspace = true }
scale-info = { workspace = true }
sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

pallet-balances = { workspace = true }
pallet-assets = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-assets/std",
    "impl-serde/std",
    "libsecp256k1/std",
    "log/std",
	"scale-info/std",
	"serde/std",
    "sp-api/std",
    "sp-application-crypto/std",
    "sp-consensus-babe/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
