[package]
name = "seed-runtime"
version = "0.1.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.145", default-features = false, optional = true, features = ["derive"] }

# Substrate
frame-executive = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
frame-election-provider-support = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
frame-support = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
frame-system = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-assets = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-authorship = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-babe = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-balances = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-bags-list = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-grandpa = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-im-online = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-nomination-pools = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-offences = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-scheduler = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-session = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-staking = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-sudo = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-timestamp = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-transaction-payment = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
pallet-utility = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-api = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-block-builder = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-consensus-babe = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-core = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-npos-elections = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-inherents = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-io = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-offchain = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-runtime = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-session = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-staking = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-std = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-transaction-pool = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }
sp-version = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false }

# EVM support
fp-rpc = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }
fp-self-contained = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }
fp-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }
evm = { git = "https://github.com/futureversecom/evm", rev = "01bcbd2205a212c34451d3b4fabc962793b057d3", default-features = false, features = ["with-codec"] }

hex-literal = { version = "0.3.4", default-features = false }
pallet-base-fee = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }
pallet-ethereum = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }
pallet-evm = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }
pallet-evm-precompile-blake2 = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }
pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/futureversecom/frontier", branch = "polkadot-v0.9.27-TRN-debug" }
precompile-utils = { path = "../evm-precompiles/utils", default-features = false }
pallet-evm-precompiles-erc721 = { path = "../evm-precompiles/erc721", default-features = false }
pallet-evm-precompiles-erc20 = { path = "../evm-precompiles/erc20", default-features = false }
pallet-evm-precompiles-nft = { path = "../evm-precompiles/nft", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
ethabi = { version = "17.1.0", default-features = false }

pallet-assets-ext = { path = "../pallet/assets-ext", default-features = false }
pallet-dex = { path = "../pallet/dex", default-features = false }
pallet-dex-rpc-runtime-api = { path = "../pallet/dex/rpc/runtime-api", default-features = false }
pallet-echo = { path = "../pallet/echo", default-features = false }
pallet-ethy = { path = "../pallet/ethy", default-features = false }
pallet-nft = { path = "../pallet/nft", default-features = false }
pallet-nft-rpc-runtime-api = { path = "../pallet/nft/rpc/runtime-api", default-features = false }
pallet-token-approvals = { path = "../pallet/token-approvals", default-features = false }
pallet-tx-fee-pot = { path = "../pallet/tx-fee-pot", default-features = false }
pallet-xrpl-bridge = { path = "../pallet/xrpl-bridge", default-features = false }
pallet-erc20-peg = { path = "../pallet/erc20-peg", default-features = false }
pallet-nft-peg = { path = "../pallet/nft-peg", default-features = false }

seed-pallet-common = { path = "../pallet/common", default-features = false }
seed-primitives = { path = "../primitives", default-features = false }
seed-runtime-constants = { path = "constants", default-features = false }
primitive-types = {version = "0.11.1", default-features = false, features = ["impl-codec", "impl-serde"] }

# Try-runtime
frame-try-runtime = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false, optional = true }
try-runtime-cli = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false, optional = true }

# Benchmark dependencies
frame-benchmarking  = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false, optional = true }
frame-system-benchmarking  = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false, optional = true }
pallet-session-benchmarking = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false, optional = true }
pallet-election-provider-support-benchmarking = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug", default-features = false, optional = true }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/futureversecom/substrate", branch = "polkadot-v0.9.27-debug" }

[dev-dependencies]
ethereum = { version = "0.12.0", features = ["with-codec"] }
seed-client = { path = "../client" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"serde",
	"frame-executive/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-try-runtime/std",
	"pallet-authorship/std",
	"pallet-assets/std",
	"pallet-babe/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-echo/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-nomination-pools/std",
	"pallet-offences/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-utility/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-npos-elections/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"seed-pallet-common/std",
	"pallet-assets-ext/std",
	"pallet-dex/std",
	"pallet-dex-rpc-runtime-api/std",
	"pallet-ethy/std",
	"pallet-nft/std",
	"pallet-nft-rpc-runtime-api/std",
	"pallet-xrpl-bridge/std",
	"pallet-tx-fee-pot/std",
	"pallet-token-approvals/std",
	"seed-primitives/std",
	"primitive-types/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	"pallet-base-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-blake2/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompiles-erc721/std",
	"pallet-evm-precompiles-erc20/std",
	"pallet-evm-precompiles-nft/std",
	"precompile-utils/std",
	"rustc-hex/std",
	"pallet-erc20-peg/std",
	"pallet-nft-peg/std",
	"ethabi/std",
	"evm/std",
	"try-runtime-cli"
]

try-runtime = [
	"frame-try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-session/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-ethereum/try-runtime",
	# "pallet-evm/try-runtime",
	# "pallet-base-fee/try-runtime",
	# Local
	"pallet-assets-ext/try-runtime",
	"pallet-dex/try-runtime",
	"pallet-nft/try-runtime",
	"pallet-xrpl-bridge/try-runtime",
	"pallet-token-approvals/try-runtime",
	"pallet-echo/try-runtime",
	"pallet-tx-fee-pot/try-runtime",
	"pallet-ethy/try-runtime",
	"pallet-erc20-peg/try-runtime",
	"pallet-nft-peg/try-runtime",
]

runtime-benchmarks = [
	# Substrate
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-session-benchmarking",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	# Local
	"pallet-nft/runtime-benchmarks",
	"pallet-xrpl-bridge/runtime-benchmarks",
	"pallet-dex/runtime-benchmarks",
]
